# Di_MATLABTool

./: .imtranslate2D.m.swp  Align_Center.m  Photon_Gaussian_Noise.m  bplot.m  checkstrs.m  coordlsl1.m  debruijn_generator.m  dftregistration.m  difference.m  dipimage_2.9_lin64.tbz  generateRandomInConvexHull.m  getCellCenteredGrid.m  grs2rgb.m  imnoise.m  imtranslate2D.m  kmeans.m  laplacian.m  license.txt  mkconstarray.m  mvnrnd.m  padarray.m  poisson9.m  radon.m  rotateAround.m  smooth2a.m  spdist.m  startup.m  sum_interval.m  tiffRead.m  xcorr.m
ADIMAT/adimat/: Install.txt  g_test.m  test.m
ADIMAT/adimat-client/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  acinclude.m4  bootstrap  config.h  config.h.in  config.status  config_pre.h  configure  configure.ac
ADIMAT/adimat-client/autom4te.cache/: output.0  requests  traces.0  traces.1
ADIMAT/adimat-client/config/: AC_CXX_HAVE_STL.m4  av_CONDITIONAL_WIN32.m4  av_DEBUG.m4  ax_lib_openssl.m4
ADIMAT/adimat-client/src/: Makefile  Makefile.am  Makefile.in  adimat-client  adimat-client-opts.cpp  adimat-client-opts.ggo  adimat-client-opts.ggo.in  adimat-client-opts.hh  adimat-client.cpp  adimat-ssl-test.cpp  connection.cpp  connection.hh  statics-adimat-client.cpp
ADIMAT/adimat-client/src/.deps/: adimat_client-adimat-client-opts.Po  adimat_client-adimat-client.Po  adimat_client-connection.Po  adimat_client-statics-adimat-client.Po
ADIMAT/adimat-client/util/: Makefile  Makefile.am  Makefile.in  adimat-version.cpp  adimat-version.h  cgi.hh  client-util.cpp  client-util.h  envvars.hh  fmt_ofstream.cpp  fmt_ofstream.h  item_searchpath.cpp  item_searchpath.h  libxml-util.cpp  libxml-util.hh  logcontext.hh  loggingstream.cpp  loggingstream.h  long-version.h  mindlist.cpp  mindlist.h  mindnode.cpp  mindnode.h  mkdir.hh  mkdirp.hh  pid.hh  random.hh  response.hh  rfc822-message.hh  searchpath.cpp  searchpath.h  splittext.hh  statics-stringtable.cpp  strftime.hh  stringtable.cpp  stringtable.h  time.hh  uri.hh  web-util.hh  windows-util.cpp  (+2 more)
ADIMAT/adimat-client/util/.deps/: libclientutil_a-adimat-version.Po  libclientutil_a-client-util.Po  libclientutil_a-fmt_ofstream.Po  libclientutil_a-item_searchpath.Po  libclientutil_a-libxml-util.Po  libclientutil_a-loggingstream.Po  libclientutil_a-mindlist.Po  libclientutil_a-mindnode.Po  libclientutil_a-searchpath.Po  libclientutil_a-stringtable.Po  libclientutil_a-windows-util.Po
Adaptive_Coordinate_Descent/: ACD.m  ACD_test.m  fcigar.m  fcigtab.m  fdiffpow.m  felli.m  frosenbrock.m  fschwefel.m  fsphere.m  ftablet.m  license.txt
CUR-matrix-decomposition/algorithm_comparison_experiments/: GR10.m
CUR-matrix-decomposition/aux_for_algorithm/: myzero_new_v2.m
Correlation in hourly records Software/: cos_cross_sim.m  parameter_map.m  summary_maps.m  summary_with_distance.m  window_cross_sim.m
CountFLOP/: ExtendedRules.xlsx  ExtendedRulesLightSpeed.xlsx  FLOPS.m  example.m  exampleFun.m  exampleFunMat.mat  exampleScript.m  exampleScriptMAT.mat  testSpell.m
DogaReconstruction/: calcRadon.m
FSC/: fourier_shell_corr.m  spinavej.m
Ipopt/: Makefile  coin_subdirs.txt  config.status  libtool
Ipopt/Ipopt/: Makefile  config.status  ipopt-uninstalled.pc  ipoptamplinterface-uninstalled.pc  ipoptamplinterface.pc
Ipopt/doxydoc/: doxygen.conf
Ipopt/lib/: ipopt.mexa64  libcoinasl.la  libcoinblas.la  libcoinlapack.la  libipopt.la
Kaczmarz/: columnkaczmarz.m~  dpmsolve.m~  dpmsolve_demo.m  kaczmarz_compare.m  license.txt  pblockkaczmarz.m  pblockkaczmarz_demo.m  problem_for_amen.m  qoptimalcolumnkaczmarz.m  qoptimalkaczmarz.m  randcolumnkaczmarz.m  randpblockkaczmarz.m  randpblockkaczmarz_demo.m
Kaczmarz/__MACOSX/: ._columnkaczmarz.m  ._html
Kaczmarz/html/: dpmsolve_demo.html  kaczmarz_compare.html  pblockkaczmarz_demo.html  problem_for_amen.html  randpblockkaczmarz_demo.html
MINLP/: license.txt  minlp.apm  minlp.m
MINLP/apm/: apm_load.m  csv_load.m
MLP_NN/: Activation_func.m  Activation_func_drev.m  EvaluateNetwork.m  MLP_NN.m  license.txt  sharky.circle.points  sharky.linear.points  sharky.spirals.points  sharky.wave.points
ODTMG/: .README.txt.swp  .RUNMEall_with_Matlab.txt.swp  README.txt  RUNMEall_with_Matlab  RUNMEall_without_Matlab
ODTMG/MAT/: .find_array_with_name.m.swp  EXAMPLE_DATfileIO.m  add_detector_noise.m  add_line_to_header.m  datOpen.m  find_array_with_name.m  initialize_header.m  loadmu.m  morexsection.m  multitranspose.m  plotyy.m  plotzz.m~  read_float.m  read_float_array.m  read_int.m  select_meas.m  select_meas8.m  snropposite.m  snropposite2.m  write_float.m  write_float_array.m  write_int.m  xsection.m  xsection129.m  xsection17.m  xsection257.m  xsection33.m  xsection65.m
ODTMG/code/: Makefile  README  allocate.c  allocate.h  calibrate.c  cud2.d  cud3.d  defs.h  fileop.c  frechet.c  fwdsolver3d.f  homogeneous.c  icd.c  icdmain.c  icdsd.c  listfun.c  listfun.h  liststructs.h  mgutil.c  multigrid.c  randlib.c  solve.c  solve.h  structs.h  test.c  textfile.c  textfile.h
ODTMG/example/: .RUNME.m.swp  RUNME.m~  RUNMEfwd~  RUNMEinv  config  costparse.m  icdmain  phys_all1.0  prior_D  prior_mua
ODTMG/getmu/: Makefile  RUNME  defs.h  fileop.c  gen_x.c  getmu  structs.h
ODTMG/getmuinit/: RUNME  fileop.h  gen_x.c  getmu
SGDLibrary/gd_solver/: backtracking_line_search.m  bfgs.m  lbfgs.m  lbfgs_two_loop_check.m  (+4 more)
Tool_Tomo/: license.txt
canny/: canny.m
dip/: README.txt
dwt/: .dwt2D.m.swp  afb2D_A.m~
ezw/: README  bitLenna  bitStreamGenerator.m  daubcqf.m  dominantPass.m  invDominantPass.m  invSubordinatePass.m  lennaDriver.m  mdwt.m  mdwt.mex4  mdwt.mexsol  midwt.m  midwt.mex4  midwt.mexsol  readBitStream.m  readbin.m  reconstruction.m  significanceMap.m  subordinatePass.m  writeBitStream.m  writebin.m
figuremaker/: Contents.m  INSTALL.txt  README.txt  exampleExportfig.m
files/: DiscreteShift2D.m  FourierShift2D.m  imshow3D.m  imshow3Dfull.m  interpBad.m  map1D.m  medfilt1.m  qqplot.m
matlabPyrTools-master/: cwssim_index.m
phantom3d/: IntersectionSet.m  Tomo_startup.m  XTM_Tensor.m  biosample.m  intersectLinePolygon.m  license.txt
(+1387 files in other folders)
